--- a/wiki/it/Macro_Colorize.html
+++ b/wiki/it/Macro_Colorize.html
@@ -4,7 +4,6 @@
 <li><a href="../fr/Macro_Colorize.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Colorize (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Colorize.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Kolorowanie (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -13,13 +12,13 @@ Macro Colorize
 </p>
 </td></tr>
 <tr>
-<th class="ctOdd">Description
+<th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Quickly and easily set the color and transparency of individual faces, edges, and vertices.<br><br>Macro version: 1.03<br>Last modified: 2023-10-07<br>FreeCAD version: Python3 builds<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/d/de/Workbench_Image.svg">ToolBar Icon</a><br>Author: TheMarkster<br>
+<td class="ctEven left macro-description">Imposta in modo rapido e semplice il colore e la trasparenza di singole facce, bordi e vertici.<br><br>Versione macro: 1.03<br>Ultima modifica: 2023-10-07<br>Versione FreeCAD: Python3 builds<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/d/de/Workbench_Image.svg">ToolBar Icon</a><br>Autore: TheMarkster<br>
 </td></tr>
 <tr>
-<th class="ctOdd">Author
+<th class="ctOdd">Autore
 </th></tr>
 <tr>
 <td class="ctEven macro-author"><a href="../index.php?title=User;TheMarkster&amp;action=edit&amp;redlink=1.html" class="new" title="User:TheMarkster (page does not exist)">TheMarkster</a>
@@ -31,40 +30,40 @@ Macro Colorize
 <td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/d/de/Workbench_Image.svg">ToolBar Icon</a>
 </td></tr>
 <tr>
-<th class="ctOdd">Links
+<th class="ctOdd">Link
 </th></tr>
 <tr>
-<td class="ctEven macro-Links"><a href="../Macros_recipes.html" title="Macros recipes">Macros recipes</a><br><a href="../How_to_install_macros.html" title="How to install macros">How to install macros</a><br><a href="../Customize_Toolbars.html" title="Customize Toolbars">How to customize toolbars</a>
+<td class="ctEven macro-Links"><a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a><br><a href="../it/How_to_install_macros.html" title="How to install macros/it">Come installare le macro</a><br><a href="../it/Customize_Toolbars.html" title="Customize Toolbars/it">Personalizzare la  toolbar</a>
 </td></tr>
 <tr>
-<th class="ctOdd">Macro Version
+<th class="ctOdd">Versione macro
 </th></tr>
 <tr>
 <td class="ctEven macro-version">1.03
 </td></tr>
 <tr>
-<th class="ctOdd">Date last modified
+<th class="ctOdd">Data ultima modifica
 </th></tr>
 <tr>
 <td class="ctEven macro-date">2023-10-07
 </td></tr>
 <tr>
-<th class="ctOdd">FreeCAD Version(s)
+<th class="ctOdd">Versioni di FreeCAD
 </th></tr>
 <tr>
 <td class="ctEven FreeCAD-version">Python3 builds
 </td></tr>
 <tr>
-<th class="ctOdd">Default shortcut
+<th class="ctOdd">Scorciatoia
 </th></tr>
 <tr>
-<td class="ctEven"><i>None</i>
+<td class="ctEven"><i>Nessuna</i>
 </td></tr>
 <tr>
-<th class="ctOdd">See also
+<th class="ctOdd">Vedere anche
 </th></tr>
 <tr>
-<td class="ctEven"><i>None</i>
+<td class="ctEven"><i>Nessuno</i>
 </td></tr>
 <tr>
 <th class="ctOdd">
@@ -73,7 +72,6 @@ Macro Colorize
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
@@ -213,15 +211,15 @@ setColors()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123144338
+Cached time: 20260123150103
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.030 seconds
-Real time usage: 0.062 seconds
-Preprocessor visited node count: 118/1000000
-Post&#8208;expand include size: 3006/2097152 bytes
-Template argument size: 4629/2097152 bytes
+CPU time usage: 0.033 seconds
+Real time usage: 0.051 seconds
+Preprocessor visited node count: 115/1000000
+Post&#8208;expand include size: 3036/2097152 bytes
+Template argument size: 4633/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -229,14 +227,14 @@ Unstrip post&#8208;expand size: 5317/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.704      1 -total
- 29.28%    4.599      1 Template:MacroCode
- 27.59%    4.332      3 Template:Button
- 24.93%    3.915      1 Template:Macro
- 15.03%    2.360      1 Template:Clear
+100.00%    9.050      1 -total
+ 37.33%    3.378      1 Template:Macro/it
+ 26.28%    2.378      1 Template:MacroCode
+ 15.99%    1.447      3 Template:Button
+ 15.09%    1.366      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412439-0!canonical and timestamp 20260123144338 and revision id 1742945. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412439-0!canonical and timestamp 20260123150103 and revision id 1742947. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
