--- a/wiki/it/Macro_Colorize.html
+++ b/wiki/it/Macro_Colorize.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Colorize.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Einf&auml;rben (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Colorize.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Colorize (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Colorize.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Colorize (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Colorize.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Kolorowanie (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -79,17 +79,15 @@ Macro Colorize
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ol><li>Select one or more subobjects.</li>
-<li>Run the macro.</li>
-<li>The standard Qt color dialog opens.</li>
-<li>Select the color.</li>
-<li>Set the transparency by changing the alpha channel (0 = fully opaque, 255 = fully transparent).</li>
-<li>Do one of the following:
-<ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> button to close the dialog and apply the color and transparency.</li>
-<li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Cancel</span> button to cancel the macro.</li></ul></li>
-<li>If you have pressed <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> and the subobjects belong to more than one object, the color dialog will re-open for the next object.</li></ol>
-</div>
+<ol><li>Selezionare uno o pi&ugrave; sotto-oggetti.</li>
+<li>Eseguire la macro.</li>
+<li>Si apre la finestra di dialogo standard dei colori Qt.</li>
+<li>Selezionare il colore.</li>
+<li>Impostare la trasparenza modificando il canale alfa (0 = completamente opaco, 255 = completamente trasparente).</li>
+<li>Eseguire una delle seguenti operazioni:
+<ul><li>Premere il pulsante <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> per chiudere la finestra di dialogo e applicare il colore e la trasparenza.</li>
+<li>Premere il pulsante <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Annulla</span> per annullare la macro.</li></ul></li>
+<li>Se si ha premuto <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> e i sub-oggetti appartengono a pi&ugrave; di un oggetto, la finestra di dialogo dei colori si riaprir&agrave; per l'oggetto successivo.</li></ol>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Note">Note</span></h2>
@@ -209,30 +207,30 @@ setColors()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123154903
+Cached time: 20260123154948
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.033 seconds
-Real time usage: 0.053 seconds
-Preprocessor visited node count: 114/1000000
-Post&#8208;expand include size: 3036/2097152 bytes
-Template argument size: 4633/2097152 bytes
+CPU time usage: 0.031 seconds
+Real time usage: 0.055 seconds
+Preprocessor visited node count: 113/1000000
+Post&#8208;expand include size: 3037/2097152 bytes
+Template argument size: 4634/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 5317/5000000 bytes
+Unstrip post&#8208;expand size: 5321/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.680      1 -total
- 34.44%    3.678      1 Template:Macro/it
- 25.12%    2.683      1 Template:MacroCode
- 17.96%    1.918      3 Template:Button
- 17.88%    1.910      1 Template:Clear
+100.00%   12.646      1 -total
+ 36.41%    4.605      1 Template:MacroCode
+ 32.03%    4.051      1 Template:Macro/it
+ 16.37%    2.070      3 Template:Button
+ 11.12%    1.406      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412439-0!canonical and timestamp 20260123154903 and revision id 1742949. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412439-0!canonical and timestamp 20260123154948 and revision id 1742951. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
