--- a/wiki/it/Macro_MacroToolbarManager.html
+++ b/wiki/it/Macro_MacroToolbarManager.html
@@ -90,9 +90,9 @@ Macro MacroToolbarManager
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Macro MacroToolbarManager screenshot&lrm;</p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Legend">Legend</span></h2>
-</div>
+<p><span id="Legend"></span>
+</p>
+<h2><span class="mw-headline" id="Legenda">Legenda</span></h2>
 <div class="toccolours mw-collapsible mw-collapsed" style="cursor:not-allowed">
 <p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://gist.github.com/mwganson/3464e2d54e859ee94ec8d7ce20c75660/raw/5bcd7bff7b451709ff300e3ee1269ff379c9b087/MacroToolbarManager.FCMacro">Macro</a></i>
 </p>
@@ -147,12 +147,12 @@ webbrowser.open("https://gist.github.com/mwganson/3464e2d54e859ee94ec8d7ce20c756
 
 <!-- 
 NewPP limit report
-Cached time: 20260123155256
+Cached time: 20260123155303
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.045 seconds
-Real time usage: 0.108 seconds
+CPU time usage: 0.030 seconds
+Real time usage: 0.044 seconds
 Preprocessor visited node count: 125/1000000
 Post&#8208;expand include size: 4070/2097152 bytes
 Template argument size: 1400/2097152 bytes
@@ -163,14 +163,14 @@ Unstrip post&#8208;expand size: 2216/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.020      1 -total
- 36.21%   12.682      1 Template:CodeDownload
- 29.09%   10.188      1 Template:Codeextralink
- 18.38%    6.435      1 Template:Macro
- 13.39%    4.691      1 Template:Caption
+100.00%    9.262      1 -total
+ 31.55%    2.922      1 Template:Macro
+ 28.47%    2.637      1 Template:Codeextralink
+ 21.22%    1.965      1 Template:CodeDownload
+ 16.15%    1.496      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412450-0!canonical and timestamp 20260123155256 and revision id 1742955. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412450-0!canonical and timestamp 20260123155303 and revision id 1742957. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
