--- a/wiki/it/Macro_MacroToolbarManager.html
+++ b/wiki/it/Macro_MacroToolbarManager.html
@@ -125,16 +125,10 @@ webbrowser.open("https://gist.github.com/mwganson/3464e2d54e859ee94ec8d7ce20c756
 </div>
 <div style="display:none;">&lt;class="rawcodeurl"&gt;&lt;a href="<a rel="nofollow" class="external free" href="https://gist.github.com/mwganson/3464e2d54e859ee94ec8d7ce20c75660/raw/5bcd7bff7b451709ff300e3ee1269ff379c9b087/MacroToolbarManager.FCMacro">https://gist.github.com/mwganson/3464e2d54e859ee94ec8d7ce20c75660/raw/5bcd7bff7b451709ff300e3ee1269ff379c9b087/MacroToolbarManager.FCMacro</a>"&gt;raw code&lt;/a&gt;</div>
 <p><br>
+Icona barra degli strumenti
+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=MacroToolbarManager_icon.svg&amp;filetimestamp=20231011174135&amp;.html" class="mw-file-description"><img src="../File/MacroToolbarManager_icon.svg" decoding="async" width="60" height="60" class="mw-file-element" data-file-width="60" data-file-height="60"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=MacroToolbarManager_icon.svg&amp;filetimestamp=20231011174135&amp;.html" class="mw-file-description"><img src="../File/MacroToolbarManager_icon.svg" decoding="async" width="60" height="60" class="mw-file-element" data-file-width="60" data-file-height="60"></a></span>
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-</div>
 <p><b>Macro MacroToolbarManager.FCMacro</b>
 </p>
 <div class="plainlinks" style="width:300px; text-align:center; margin:10px auto;">
@@ -147,13 +141,13 @@ webbrowser.open("https://gist.github.com/mwganson/3464e2d54e859ee94ec8d7ce20c756
 
 <!-- 
 NewPP limit report
-Cached time: 20260123155303
+Cached time: 20260123155312
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.030 seconds
-Real time usage: 0.044 seconds
-Preprocessor visited node count: 125/1000000
+CPU time usage: 0.040 seconds
+Real time usage: 0.100 seconds
+Preprocessor visited node count: 123/1000000
 Post&#8208;expand include size: 4070/2097152 bytes
 Template argument size: 1400/2097152 bytes
 Highest expansion depth: 5/100
@@ -163,14 +157,14 @@ Unstrip post&#8208;expand size: 2216/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.262      1 -total
- 31.55%    2.922      1 Template:Macro
- 28.47%    2.637      1 Template:Codeextralink
- 21.22%    1.965      1 Template:CodeDownload
- 16.15%    1.496      1 Template:Caption
+100.00%   17.519      1 -total
+ 50.88%    8.913      1 Template:Macro
+ 26.03%    4.561      1 Template:Codeextralink
+ 11.54%    2.021      1 Template:Caption
+  9.99%    1.750      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412450-0!canonical and timestamp 20260123155303 and revision id 1742957. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412450-0!canonical and timestamp 20260123155312 and revision id 1742961. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
