--- a/wiki/it/Macro_MacroToolbarManager.html
+++ b/wiki/it/Macro_MacroToolbarManager.html
@@ -77,10 +77,8 @@ Macro MacroToolbarManager
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>MacroToolbarManager makes it easy to edit custom macro toolbars.
+<p>MacroToolbarManager semplifica la modifica delle barre degli strumenti macro personalizzate.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Full documentation can be found on github: <a rel="nofollow" class="external text" href="https://github.com/mwganson/MacroToolbarManager">MacroToolbarManager</a>.
 </p>
@@ -141,13 +139,13 @@ Icona barra degli strumenti
 
 <!-- 
 NewPP limit report
-Cached time: 20260123155312
+Cached time: 20260123155339
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.100 seconds
-Preprocessor visited node count: 123/1000000
+CPU time usage: 0.034 seconds
+Real time usage: 0.104 seconds
+Preprocessor visited node count: 122/1000000
 Post&#8208;expand include size: 4070/2097152 bytes
 Template argument size: 1400/2097152 bytes
 Highest expansion depth: 5/100
@@ -157,14 +155,14 @@ Unstrip post&#8208;expand size: 2216/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.519      1 -total
- 50.88%    8.913      1 Template:Macro
- 26.03%    4.561      1 Template:Codeextralink
- 11.54%    2.021      1 Template:Caption
-  9.99%    1.750      1 Template:CodeDownload
+100.00%   24.884      1 -total
+ 36.00%    8.959      1 Template:CodeDownload
+ 31.25%    7.777      1 Template:Caption
+ 16.60%    4.130      1 Template:Macro
+ 14.96%    3.723      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412450-0!canonical and timestamp 20260123155312 and revision id 1742961. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412450-0!canonical and timestamp 20260123155339 and revision id 1742963. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
