--- a/wiki/it/Macro_MacroToolbarManager.html
+++ b/wiki/it/Macro_MacroToolbarManager.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_MacroToolbarManager.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Makro-Symbolleisten-Manager (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_MacroToolbarManager.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro MacroToolbarManager (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_MacroToolbarManager.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro MacroToolbarManager (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_MacroToolbarManager.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Menad&#380;er pask&oacute;w narz&#281;dzi (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -78,12 +78,8 @@ Macro MacroToolbarManager
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>MacroToolbarManager semplifica la modifica delle barre degli strumenti macro personalizzate.
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Full documentation can be found on github: <a rel="nofollow" class="external text" href="https://github.com/mwganson/MacroToolbarManager">MacroToolbarManager</a>.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=MacroToolbarManager_scr01.png&amp;filetimestamp=20231027220511&amp;.html" class="mw-file-description"><img src="../File/MacroToolbarManager_scr01.png" decoding="async" width="600" height="542" class="mw-file-element" data-file-width="835" data-file-height="754"></a></span>
+</p><p>La documentazione completa pu&ograve; essere trovata su github: <a rel="nofollow" class="external text" href="https://github.com/mwganson/MacroToolbarManager">MacroToolbarManager</a>.
+</p><p><span typeof="mw:File"><a href="../index.php?title=MacroToolbarManager_scr01.png&amp;filetimestamp=20231027220511&amp;.html" class="mw-file-description"><img src="../File/MacroToolbarManager_scr01.png" decoding="async" width="600" height="542" class="mw-file-element" data-file-width="835" data-file-height="754"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Macro MacroToolbarManager screenshot&lrm;</p>
@@ -139,30 +135,30 @@ Icona barra degli strumenti
 
 <!-- 
 NewPP limit report
-Cached time: 20260123155339
+Cached time: 20260123155354
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.104 seconds
-Preprocessor visited node count: 122/1000000
+CPU time usage: 0.040 seconds
+Real time usage: 0.154 seconds
+Preprocessor visited node count: 121/1000000
 Post&#8208;expand include size: 4070/2097152 bytes
 Template argument size: 1400/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2216/5000000 bytes
+Unstrip post&#8208;expand size: 2217/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.884      1 -total
- 36.00%    8.959      1 Template:CodeDownload
- 31.25%    7.777      1 Template:Caption
- 16.60%    4.130      1 Template:Macro
- 14.96%    3.723      1 Template:Codeextralink
+100.00%   19.158      1 -total
+ 33.82%    6.480      1 Template:Codeextralink
+ 27.74%    5.314      1 Template:Macro
+ 20.92%    4.008      1 Template:Caption
+ 16.08%    3.081      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412450-0!canonical and timestamp 20260123155339 and revision id 1742963. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412450-0!canonical and timestamp 20260123155354 and revision id 1742965. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
