--- a/wiki/it/Macro_MacroToolbarManager.html
+++ b/wiki/it/Macro_MacroToolbarManager.html
@@ -81,9 +81,7 @@ Macro MacroToolbarManager
 </p><p>La documentazione completa pu&ograve; essere trovata su github: <a rel="nofollow" class="external text" href="https://github.com/mwganson/MacroToolbarManager">MacroToolbarManager</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=MacroToolbarManager_scr01.png&amp;filetimestamp=20231027220511&amp;.html" class="mw-file-description"><img src="../File/MacroToolbarManager_scr01.png" decoding="async" width="600" height="542" class="mw-file-element" data-file-width="835" data-file-height="754"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Macro MacroToolbarManager screenshot&lrm;</p>
-</div>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Schermata della macro MacroToolbarManager&lrm;</p>
 <p><span id="Legend"></span>
 </p>
 <h2><span class="mw-headline" id="Legenda">Legenda</span></h2>
@@ -135,15 +133,15 @@ Icona barra degli strumenti
 
 <!-- 
 NewPP limit report
-Cached time: 20260123155354
+Cached time: 20260123155412
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.154 seconds
-Preprocessor visited node count: 121/1000000
-Post&#8208;expand include size: 4070/2097152 bytes
-Template argument size: 1400/2097152 bytes
+CPU time usage: 0.046 seconds
+Real time usage: 0.067 seconds
+Preprocessor visited node count: 120/1000000
+Post&#8208;expand include size: 4080/2097152 bytes
+Template argument size: 1405/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -151,14 +149,14 @@ Unstrip post&#8208;expand size: 2217/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.158      1 -total
- 33.82%    6.480      1 Template:Codeextralink
- 27.74%    5.314      1 Template:Macro
- 20.92%    4.008      1 Template:Caption
- 16.08%    3.081      1 Template:CodeDownload
+100.00%   10.738      1 -total
+ 29.64%    3.183      1 Template:Codeextralink
+ 29.55%    3.173      1 Template:Macro
+ 20.06%    2.154      1 Template:Caption
+ 17.54%    1.884      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412450-0!canonical and timestamp 20260123155354 and revision id 1742965. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412450-0!canonical and timestamp 20260123155412 and revision id 1742967. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
