--- a/wiki/it/Macro_View_Rotation.html
+++ b/wiki/it/Macro_View_Rotation.html
@@ -79,11 +79,8 @@ Rotazione della vista
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>Questa interfaccia grafica consente di ruotare la vista con maggiore precisione rispetto all'uso del mouse. La rotazione avviene secondo assi fissi rispetto all'utente e non agli oggetti, sebbene l'obiettivo sia che gli oggetti ruotino approssimativamente attorno al loro centro condiviso anzich&eacute; attorno al centro della vista.
+</p><p>Per impostazione predefinita, l'interfaccia grafica utente (GUI) &egrave; posizionata in alto a destra dello schermo; questo comportamento pu&ograve; essere modificato tramite editing.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The GUI defaults to the top right of the screen, this behaviour can be changed by editing.
-</p>
-</div>
 <div class="toccolours mw-collapsible mw-collapsed" style="cursor:not-allowed">
 <p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master/PureGui/ViewRotation.FCMacro">Macro</a></i>
 </p>
@@ -120,11 +117,8 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <figure class="mw-halign-left" typeof="mw:File"><a href="../index.php?title=Macro_View_Rotation_00.png&amp;filetimestamp=20150319112124&amp;.html" class="mw-file-description" title="Rotate view"><img alt="Rotate view" src="../File/Macro_View_Rotation_00.png" decoding="async" width="480" height="410" class="mw-file-element" data-file-width="681" data-file-height="581"></a><figcaption>Rotate view</figcaption></figure>
 <div style="clear:both"></div>
 <p>Si riferiscono a tre icone per simboleggiare le direzioni di rotazione. Un file zip contenente queste icone pu&ograve; essere trovato <a rel="nofollow" class="external text" href="http://forum.freecad.org/download/file.php?id=453">qui</a>, le immagini devono essere collocate nella cartella contenente le tue macro. Sentiti libero di contribuire da farne migliori!
-</p><p><span id="Script"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Codice">Codice</span></h2>
-</div>
+<h2><span class="mw-headline" id="Script">Script</span></h2>
 <div class="mw-translate-fuzzy">
 <p>L'ultima versione della macro &egrave; disponibile all'indirizzo <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros/blob/master/PureGui/ViewRotation.FCMacro">ViewRotation.FCMacro</a> ma il modo pi&ugrave; semplice per installare questa macro &egrave; tramite <a href="../it/Std_AddonMgr.html" title="Std AddonMgr/it">Addon Manager</a>.
 </p>
@@ -401,13 +395,13 @@ if __name__ == '__main__':
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123155624
+Cached time: 20260123155648
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.098 seconds
-Preprocessor visited node count: 144/1000000
+CPU time usage: 0.041 seconds
+Real time usage: 0.077 seconds
+Preprocessor visited node count: 141/1000000
 Post&#8208;expand include size: 3069/2097152 bytes
 Template argument size: 9396/2097152 bytes
 Highest expansion depth: 5/100
@@ -417,15 +411,15 @@ Unstrip post&#8208;expand size: 11253/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.878      1 -total
- 21.92%    3.699      1 Template:Macro/it
- 19.93%    3.363      1 Template:Code
- 19.50%    3.292      1 Template:Clear
- 18.81%    3.174      1 Template:Codeextralink
- 17.21%    2.905      1 Template:MacroCode
+100.00%   16.966      1 -total
+ 27.67%    4.695      1 Template:Code
+ 20.51%    3.480      1 Template:Macro/it
+ 19.09%    3.238      1 Template:MacroCode
+ 18.84%    3.196      1 Template:Codeextralink
+ 11.74%    1.992      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2340-0!canonical and timestamp 20260123155623 and revision id 1742973. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2340-0!canonical and timestamp 20260123155648 and revision id 1742977. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
