--- a/wiki/it/Macro_View_Rotation.html
+++ b/wiki/it/Macro_View_Rotation.html
@@ -3,7 +3,7 @@
 <li><a href="../Macro_View_Rotation.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro View Rotation (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_View_Rotation.html" class="mw-pt-progress mw-pt-progress--med" title="Macro View Rotation (31% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macro_View_Rotation.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro View Rotation (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_View_Rotation.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Widok obrotowy (8% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_View_Rotation.html" class="mw-pt-progress mw-pt-progress--med" title="Makro Rotace pohledu (38% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../ru/Macro_View_Rotation.html" class="mw-pt-progress mw-pt-progress--low" title="Macro View Rotation/ru (8% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
@@ -123,11 +123,8 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <p>L'ultima versione della macro &egrave; disponibile all'indirizzo <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros/blob/master/PureGui/ViewRotation.FCMacro">ViewRotation.FCMacro</a> ma il modo pi&ugrave; semplice per installare questa macro &egrave; tramite <a href="../it/Std_AddonMgr.html" title="Std AddonMgr/it">Addon Manager</a>.
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_View_Rotation.png&amp;filetimestamp=20190607123811&amp;.html" class="mw-file-description"><img src="../File/Macro_View_Rotation.png" decoding="async" width="65" height="69" class="mw-file-element" data-file-width="65" data-file-height="69"></a></span>
-</p>
-</div>
-<p><b>Macro View Rotation.FCMacro</b>
+<p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_View_Rotation.png&amp;filetimestamp=20190607123811&amp;.html" class="mw-file-description"><img src="../File/Macro_View_Rotation.png" decoding="async" width="65" height="69" class="mw-file-element" data-file-width="65" data-file-height="69"></a></span>
+</p><p><b>Macro View Rotation.FCMacro</b>
 </p>
 <pre># -*- coding: utf-8 -*-
 #
@@ -376,12 +373,11 @@ if __name__ == '__main__':
     # We need to set a variable, otherwise, the dialog doesn't appear.
     rotate = RotateGui()</pre>
 <p><br>
+<span id="Option"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Option">Option</span></h2>
-</div>
+<h2><span class="mw-headline" id="Opzioni">Opzioni</span></h2>
 <div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Option_2">Option</span></h2>
+<h2><span class="mw-headline" id="Option">Option</span></h2>
 <p>alla fine della funzione 'initUI'. I primi due argomenti (right-300, 0) (linea 91) stabiliscono come posizione l'angolo in alto a sinistra della finestra - per esperienza questa posizione si adatta bene ad Ubuntu, ma con Vista la finestra risulta troppo in alto per cui &egrave; meglio sostituire lo 0 con un valore vicino a 30.
 </p>
 </div>
@@ -395,31 +391,31 @@ if __name__ == '__main__':
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123155648
+Cached time: 20260123155709
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.041 seconds
-Real time usage: 0.077 seconds
-Preprocessor visited node count: 141/1000000
+CPU time usage: 0.050 seconds
+Real time usage: 0.211 seconds
+Preprocessor visited node count: 140/1000000
 Post&#8208;expand include size: 3069/2097152 bytes
 Template argument size: 9396/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 11253/5000000 bytes
+Unstrip post&#8208;expand size: 11254/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.966      1 -total
- 27.67%    4.695      1 Template:Code
- 20.51%    3.480      1 Template:Macro/it
- 19.09%    3.238      1 Template:MacroCode
- 18.84%    3.196      1 Template:Codeextralink
- 11.74%    1.992      1 Template:Clear
+100.00%   42.243      1 -total
+ 31.47%   13.292      1 Template:Macro/it
+ 22.75%    9.612      1 Template:Code
+ 19.30%    8.153      1 Template:Codeextralink
+ 12.76%    5.389      1 Template:Clear
+ 11.56%    4.884      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2340-0!canonical and timestamp 20260123155648 and revision id 1742977. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2340-0!canonical and timestamp 20260123155709 and revision id 1742981. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
